WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
228339
The bundle path of downlevel Safari is wrong
https://bugs.webkit.org/show_bug.cgi?id=228339
Summary
The bundle path of downlevel Safari is wrong
Peng Liu
Reported
2021-07-27 12:16:41 PDT
The bundle path of downlevel Safari is wrong
Attachments
Patch
(1.77 KB, patch)
2021-07-27 12:23 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
WIP patch
(1.89 KB, patch)
2021-07-28 11:41 PDT
,
Peng Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Peng Liu
Comment 1
2021-07-27 12:19:22 PDT
<
rdar://81144255
>
Peng Liu
Comment 2
2021-07-27 12:23:04 PDT
Created
attachment 434307
[details]
Patch
EWS
Comment 3
2021-07-27 15:15:51 PDT
Committed
r280351
(
239998@main
): <
https://commits.webkit.org/239998@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434307
[details]
.
Peng Liu
Comment 4
2021-07-28 11:23:58 PDT
Reopen this bug because the issue is not fixed.
Peng Liu
Comment 5
2021-07-28 11:41:22 PDT
Created
attachment 434443
[details]
WIP patch
Tim Horton
Comment 6
2021-07-28 12:55:23 PDT
patch looks good to me. is it not r? because you want to test it first?
Peng Liu
Comment 7
2021-07-28 12:57:37 PDT
(In reply to Tim Horton from
comment #6
)
> patch looks good to me. is it not r? because you want to test it first?
Yes! Thanks for reviewing. Will update after I complete the verification.
EWS
Comment 8
2021-07-29 10:50:46 PDT
Committed
r280433
(
240071@main
): <
https://commits.webkit.org/240071@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 434443
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug