Cherry-pick r280351. rdar://problem/81196087

The bundle path of downlevel Safari is wrong
    https://bugs.webkit.org/show_bug.cgi?id=228339

    Reviewed by Jer Noble.

    Fix the bundle path. The correct path is "/Library/Apple/System/Library/StagedFrameworks/Safari".

    * Shared/Cocoa/WebPreferencesDefaultValuesCocoa.mm:
    (WebKit::isFeatureFlagEnabled):

    Canonical link: https://commits.webkit.org/239998@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@280351 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/239676.14@safari-612.1.24.11-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612.1.24.11-branch@280372 268f45cc-cd09-0410-ab3c-d52691b4dbfc